# frontiers_yildizetal

./: AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  yildiz_et_al_2023.ipynb
.github/workflows/: binder.yaml  main.yml
docs/: Makefile  changelog.md  conf.py  download_links.yml  example.ipynb  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
figures/EPS/: fig1.eps  fig2.eps  fig3.eps  fig4.eps  fig5.eps  fig6.eps  fig7.eps  fig8.eps
figures/revision/: rev_fig1.eps  rev_fig1.ipynb
figures/scripts/: fig1.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  fig8.py  figX.ipynb  figY.ipynb
notebooks/: summary.ipynb
publication/: yildiz_et_al_2022.bib  yildiz_et_al_2023_final.tex
src/: scalar_emulators.py
src/frontiers_yildizetal/: __init__.py  emulators.py  frontiers_yildizetal.py  ravaflow.py  scalar_emulators.py  scalar_emulators2.py
src/frontiers_yildizetal/analysis/: __init__.py  lateral_spread.py  mcs.py  pem.py  uq.py
src/frontiers_yildizetal/files/: download_links.yml
src/frontiers_yildizetal/files/input/: input_emulator_simple_validate.csv  input_mcs1_acheron.csv  input_mcs2_acheron.csv  input_mcs3_acheron.csv
src/frontiers_yildizetal/utilities/: __init__.py  data.py
tests/: test_frontiers_yildizetal.py
tests/input/: input_emulator_acheron.csv  input_emulator_simple.csv  input_mcs1_simple.csv  input_mcs2_simple.csv  input_mcs3_simple.csv
(+10 files in other folders)
