[tool.poetry]
name = "frontiers_yildizetal"
version = "0.1.0"
description = "Python package used in Yildiz et al. (2022) in Frontiers"
authors = ["Anil Yildiz"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
